# ReTraTos

./: AUTHORS  Auxiliares.pm  Blocos.pm  COPYING  ChangeLog  Filtra.pm  Gera.pm  Identifica.pm  Lexico.pm  Makefile.am  Ordena.pm  README  README.md  ReTraTos.pl  ReTraTos_lex.1  ReTraTos_lex.pl  ReTraTos_rules.1  autogen.sh  configure.ac  identifica_padroes.pl
ReTraTos/: Auxiliares.pm  Blocos.pm  Entrada.pm  Filtra.pm  Gera.pm  Identifica.pm  Lexico.pm  Makefile.am  Ordena.pm  Prefix.pm.in
m4/: perlmodules.m4
pod/: Auxiliares.pod  Blocos.pod  Entrada.pod  Filtra.pod  Gera.pod  Identifica.pod  Lexico.pod  Ordena.pod
test/: Makefile.am  README  dic_footer.txt  dic_header.txt  en.txt  pt.txt
