AC_PREREQ([2.56])

AC_INIT([retratos], [0.8], [helename@sourceforge.net])
AM_INIT_AUTOMAKE([retratos], [0.8], no-define)

AM_MAINTAINER_MODE

#use Getopt::Long;
#use Pod::Usage;
#use IO::Handle;

AC_CHECK_PERL_MODULES(Getopt::Long Pod::Usage IO::Handle, ,
                          AC_MSG_WARN(Need some Perl modules)

